admin can add product.

--- a/ProductManagementUi/ProductManagementUi/Pages/Products_admin.cshtml
+++ b/ProductManagementUi/ProductManagementUi/Pages/Products_admin.cshtml
@@ -8,11 +8,11 @@
     <form class="form-addProduct" method="post">
         <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
         <label for="inputEmail" class="sr-only">Title</label>
-        <input type="text" id="inputTitle" class="form-control" placeholder="Title" required autofocus asp-for="Product.Title">
+        <input type="text" id="inputTitle" class="form-control" placeholder="Title" required autofocus asp-for="ViewModel.Product.Title">
         <label for="inputPassword" class="sr-only">Quantity</label>
-        <input type="text" id="inputQuantity" class="form-control" placeholder="Quantity" required asp-for="Product.Quantity">
+        <input type="text" id="inputQuantity" class="form-control" placeholder="Quantity" required asp-for="ViewModel.Product.Quantity">
         <label for="inputPassword" class="sr-only">Price</label>
-        <input type="text" id="inputPassword" class="form-control" placeholder="Password" required asp-for="Product.Price">
+        <input type="text" id="inputPassword" class="form-control" placeholder="Password" required asp-for="ViewModel.Product.Price">
         @Html.ValidationSummary(false)
         <button class="btn btn-lg btn-primary btn-block" type="submit">Add</button>
     </form>
@@ -34,7 +34,7 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model.Products)
+        @foreach (var item in Model.ViewModel.Products)
         {
             <tr>
                 <td>
