--- a/ProductManagementUi/ProductManagementUi/Pages/Products.cshtml
+++ b/ProductManagementUi/ProductManagementUi/Pages/Products.cshtml
@@ -37,7 +37,7 @@
                     @Html.DisplayFor(modelItem => item.Price)
                 </td>
                 <td>
-                    <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> 
                     <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
             </tr>
