--- a/ProductManagementUi/ProductManagementUi/Pages/EditProduct.cshtml
+++ b/ProductManagementUi/ProductManagementUi/Pages/EditProduct.cshtml
@@ -15,6 +15,6 @@
         <label for="Price" >Price</label><br>
         <input type="text" id="inputPrice" class="form-control" required asp-for="Product.Price">
         @Html.ValidationSummary(false)
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Save</button>
+        <button class="btn btn-lg btn-primary btn-block" asp-page-handler="update" type="submit">Save</button>
     </form>
 
