--- a/ProductManagementUi/ProductManagementUi/Pages/Login.cshtml
+++ b/ProductManagementUi/ProductManagementUi/Pages/Login.cshtml
@@ -6,9 +6,9 @@
 
     <form class="form-signin" method="post">
         <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-        <label for="inputEmail" class="sr-only">Email address</label>
+        <label for="inputEmail">Email address</label>
         <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus asp-for="User.Email">
-        <label for="inputPassword" class="sr-only">Password</label>
+        <label for="inputPassword">Password</label>
         <input type="password" id="inputPassword" class="form-control" placeholder="Password" required asp-for="User.Password">
         @Html.ValidationSummary(false)
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
